@@ -8,8 +8,15 @@
 
 LRESULT CSearchNameEdit::OnChar( UINT uMsg, WPARAM wParam, LPARAM lParam, BOOL& bHandled)
 {
-	if ( _tcschr( _T(";!@#%^&*()=+ \t~`/\\,<>:'\"[]{}|"), wParam ) )
-		return 0;
+	try
+	{
+		if ( _tcschr( _T(";!@#%^&*()=+ \t~`/\\,<>:'\"[]{}|"), wParam ) )
+			return 0;
+	}
+	catch ( ... )
+	{
+		MessageBox( _T("An enternal error was encountered:  CSearchNameEdit::OnChar"), _T("DQSD Search Wizard Exception"), MB_OK|MB_ICONERROR );
+	}
 
 	return DefWindowProc();
 }
